--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,30 @@
 layout: default
 ---
 
+here: NEW
+<h1>
+  {{ page.title }}
+</h1>
+{% if page.image %}
+  <img src="{{ site.github.url }}/assets/img/{{ page.image }}">
+{% endif %}
+<article>
+  {{ content }}
+</article>
+{% if site.hide_post_date != true %}
+  {% include post-date.html %}
+{% endif %}
+{% if site.hide_post_share != true %}
+  {% include social-sharing.html %}
+{% endif %}
+{% if site.hide_related_posts != true %}
+  {% include related-posts.html %}
+{% endif %}
+{% if site.data.settings.disqus.comments %}
+  {% include disqus.html %}
+{% endif %}
+
+here: OLD
 {% for post in paginator.posts %}
   <div class="posts-container">
     <h1>
