Update to hopefully correct links to lightbox ressources

--- a/_includes/lightbox.html
+++ b/_includes/lightbox.html
@@ -2,5 +2,5 @@
   include lightbox as per https://jekyllcodex.org/without-plugin/lightbox/# 
   must be included just before </body>
 -->
-<script type="text/javascript" src="/assets/js/lightbox.js"></script>
-<link rel="stylesheet" href="/assets/css/lightbox.css">
+<script type="text/javascript" src="assets/js/lightbox.js"></script>
+<link rel="stylesheet" href="assets/css/lightbox.css">
